# ndarray-conv

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  test.metal
benches/: basic.rs  with_torch.rs
src/: lib.rs  main.rs  padding.rs
src/conv/: mod.rs  tests.rs
src/conv_2d/: c2cfft.rs  fft copy 2.rs  fft copy.rs  fft.rs  fft_2d.rs  mod copy 2.rs  mod copy.rs  mod-simd.rs  mod.rs  naive_conv.rs  ndrustfft.rs  ndrustfft_c2c.rs  padding.rs
src/conv_fft/: fft.rs  good_size.rs  mod.rs  padding.rs  tests.rs
src/conv_fft/processor/: complex.rs  mod.rs  real.rs
src/conv_wgpu/: conv.wgsl  ctx.rs  fft.wgsl  mod.rs
src/dilation/: mod.rs
src/padding/: dim.rs  half_dim.rs  mod.rs
