[package]
name = "ndarray-conv"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["convolution", "ndarray", "FFT"]
description = "N-Dimension convolution (with FFT) lib for ndarray."
repository = "https://github.com/TYPEmber/ndarray-conv.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15", features = ["rayon"]}
num = "0.4"
rustfft = "6.2"
realfft = "3.3"
thiserror = "1.0"

# [dev-dependencies]
ndarray-rand = "0.14"

[dev-dependencies]
tch = {version = "0.13.0", features = ["download-libtorch"]}
