[package]
name = "ndarray-conv"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["convolution", "ndarray", "FFT"]
description = "N-Dimension convolution (with FFT) lib for ndarray."
repository = "https://github.com/TYPEmber/ndarray-conv.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.16", features = ["rayon"]}
num = "0.4"
rustfft = "6.4"
realfft = "3.5"
thiserror = "2.0"
castaway = "0.2"

[dev-dependencies]
tch = {version = "0.20.0", features = ["download-libtorch"]}
criterion = { version = "0.6", features = ["html_reports"] }
fft-convolver = "0.2"
# fftconvolve = "0.1"
convolutions-rs = "0.3"
ndarray-vision = "0.5"
ndarray-rand = "0.15"

[[bench]]
name = "with_torch"
harness = false